crates/elenchus-parser/tests/snapshots/errors__list_premise_needs_two_atoms.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        PREMISE modes:\n            EXCLUSIVE\n                Sys mode idle\n        CHECK Sys\n        \"#)"
---
Syntax Error at line 5, col 1: a list premise needs at least two atoms
  |         CHECK Sys
  | ^--- here
